; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_macronix_set_4byte.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_macronix_set_4byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_nor = type { i32 (%struct.spi_nor*, i32, i32*, i32)*, i64 }
%struct.spi_mem_op = type { i32 }

@SPINOR_OP_EN4B = common dso_local global i32 0, align 4
@SPINOR_OP_EX4B = common dso_local global i32 0, align 4
@SPI_MEM_OP_NO_ADDR = common dso_local global i32 0, align 4
@SPI_MEM_OP_NO_DUMMY = common dso_local global i32 0, align 4
@SPI_MEM_OP_NO_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_nor*, i32)* @macronix_set_4byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @macronix_set_4byte(%struct.spi_nor* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.spi_nor*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.spi_mem_op, align 4
  store %struct.spi_nor* %0, %struct.spi_nor** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %8 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %30

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = load i32, i32* @SPINOR_OP_EN4B, align 4
  br label %18

16:                                               ; preds = %11
  %17 = load i32, i32* @SPINOR_OP_EX4B, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = phi i32 [ %15, %14 ], [ %17, %16 ]
  %20 = call i32 @SPI_MEM_OP_CMD(i32 %19, i32 1)
  %21 = load i32, i32* @SPI_MEM_OP_NO_ADDR, align 4
  %22 = load i32, i32* @SPI_MEM_OP_NO_DUMMY, align 4
  %23 = load i32, i32* @SPI_MEM_OP_NO_DATA, align 4
  %24 = call i32 @SPI_MEM_OP(i32 %20, i32 %21, i32 %22, i32 %23)
  %25 = getelementptr inbounds %struct.spi_mem_op, %struct.spi_mem_op* %6, i32 0, i32 0
  store i32 %24, i32* %25, align 4
  %26 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %27 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = call i32 @spi_mem_exec_op(i64 %28, %struct.spi_mem_op* %6)
  store i32 %29, i32* %3, align 4
  br label %44

30:                                               ; preds = %2
  %31 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %32 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %31, i32 0, i32 0
  %33 = load i32 (%struct.spi_nor*, i32, i32*, i32)*, i32 (%struct.spi_nor*, i32, i32*, i32)** %32, align 8
  %34 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %35 = load i32, i32* %5, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %30
  %38 = load i32, i32* @SPINOR_OP_EN4B, align 4
  br label %41

39:                                               ; preds = %30
  %40 = load i32, i32* @SPINOR_OP_EX4B, align 4
  br label %41

41:                                               ; preds = %39, %37
  %42 = phi i32 [ %38, %37 ], [ %40, %39 ]
  %43 = call i32 %33(%struct.spi_nor* %34, i32 %42, i32* null, i32 0)
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %41, %18
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @SPI_MEM_OP(i32, i32, i32, i32) #1

declare dso_local i32 @SPI_MEM_OP_CMD(i32, i32) #1

declare dso_local i32 @spi_mem_exec_op(i64, %struct.spi_mem_op*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
